--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ default = ["wide", "mouse", "extensions"]
 wide       = []
 mouse      = []
 extensions = []
+panel      = []
+menu       = []
+form       = []
